--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -7,13 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/Login" method="post">
-        <input type="text" name="email" placeholder="Email">
+    <form action="/Signup" method="post">
+        <input type="email" name="email" placeholder="Email">
         <input type="number" name="aadhar" placeholder="Aadhar">
         <input type="tel" name="phone" placeholder="Mobile Number">
         <input type="password" name="password" placeholder="Password">
         <input type="password" name="confirmPassword" placeholder="Confirm Password">
-        <input type="submit" value="Send">
+        <input type="submit" value="Send" onclick="OpenOtpTab()">
     </form>
 </body>
 </html>
