User complaint done

--- a/views/user/complaintRegistration.ejs
+++ b/views/user/complaintRegistration.ejs
@@ -10,8 +10,8 @@
 </head>
 <body>
     <!-- all -->
-    <form class="form-group" action="/LodgeComplaint" method="post" enctype="multipart/form-data" >
-        <input type="text" name="Name " placeholder="Name"> <br>   
+    <form action="/LodgeComplaint" method="post">
+        <input type="text" name="Name" id="" placeholder="Name"><br> 
         <input type="text" name="Age" id="" placeholder="Age"><br> 
         <input type="text" name="Date" id="" placeholder="Date"><br> 
         <input type="text" name="Gender" id="" placeholder="Gender"><br> 
