File upload to s3 done

--- a/views/user/complaintRegistration.ejs
+++ b/views/user/complaintRegistration.ejs
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- all -->
-    <form action="/LodgeComplaint" method="post">
+    <form action="/LodgeComplaint" method="post" enctype="multipart/form-data">
         <input type="text" name="Name" id="" placeholder="Name"><br> 
         <input type="text" name="Age" id="" placeholder="Age"><br> 
         <input type="text" name="Date" id="" placeholder="Date"><br> 
