--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Pages / Login - NiceAdmin Bootstrap Template</title>
+  <title>Login</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -41,9 +41,9 @@
             <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
               <div class="d-flex justify-content-center py-4">
-                <a href="index.html" class="logo d-flex align-items-center w-auto">
+                <a href="home.ejs" class="logo d-flex align-items-center w-auto">
                   <img src="assets/img/logo.png" alt="">
-                  <span class="d-none d-lg-block">NiceAdmin</span>
+                  <span class="d-none d-lg-block">Yukti</span>
                 </a>
               </div><!-- End Logo -->
 
@@ -87,7 +87,7 @@
                       <button class="btn btn-primary w-100" type="submit" value="Send">Login</button>
                     </div>
                     <div class="col-12">
-                      <p class="small mb-0">Don't have account? <a href="/Signup">Create an account</a></p>
+                      <p class="small mb-0">Don't have account? <a href="/signup">Create an account</a></p>
                     </div>
                   </form>
 
