--- a/views/auth/confirmOTP.ejs
+++ b/views/auth/confirmOTP.ejs
@@ -53,7 +53,7 @@
                 <div class="card-body">
 
                   <div class="pt-4 pb-2">
-                    <h5 class="card-title text-center pb-0 fs-4">Forget Password</h5>
+                    <h5 class="card-title text-center pb-0 fs-4">Confirm OTP</h5>
                     <p class="text-center small">Enter your Email</p>
                   </div>
 
