--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -125,6 +125,34 @@
                                             <input type="password" name="confirmPassword" class="form-control" required>
                                             <div class="invalid-feedback">Please enter your password!</div>
                                         </div>
+                                        <div class="col-12">
+                                            <label for="address" class="form-label">Address</label>
+                                            <input type="text" name="address" class="form-control" id="address" required>
+                                            <div class="invalid-feedback">Addess</div>
+                                        </div>
+                                        <div class="col-12">
+                                            <label for="city" class="form-label">City/Town</label>
+                                            <input type="text" name="city" class="form-control" id="city" required>
+                                            <div class="invalid-feedback">City/Town</div>
+                                        </div>
+
+                                        <div class="col-12">
+                                            <label for="yourEmail" class="form-label">State</label>
+                                            <input type="text" name="state" class="form-control" id="state" required>
+                                            <div class="invalid-feedback">state</div>
+                                        </div>
+
+                                        <div class="col-12">
+                                            <label for="country" class="form-label">Country</label>
+                                            <input type="text" name="country" class="form-control" id="country" required>
+                                            <div class="invalid-feedback">Country</div>
+                                        </div>
+
+                                        <div class="col-12">
+                                            <label for="pincode" class="form-label">Pincode</label>
+                                            <input type="text" name="pincode" class="form-control" id="pincode" required>
+                                            <div class="invalid-feedback">Pincode</div>
+                                        </div>
 
                                         <div class="col-12">
                                             <div class="form-check">
