--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -51,7 +51,7 @@
                         <div class="col-lg-6 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
                             <div class="d-flex justify-content-center py-4">
-                                <a href="home.ejs" class="logo d-flex align-items-center w-auto">
+                                <a href="/" class="logo d-flex align-items-center w-auto">
                                     <img src="assets/img/logo.png" alt="">
                                     <span class="d-none d-lg-block">Yukti</span>
                                 </a>
