Login Signup Functionaly Updated

--- a/views/auth/confirmOTP.ejs
+++ b/views/auth/confirmOTP.ejs
@@ -71,11 +71,11 @@
                     </div>
 
                     <div class="col-12">
-                        <label for="yourUsername" class="form-label">Email</label>
+                        <label for="yourUsername" class="form-label">OTP</label>
                         <div class="input-group has-validation">
                           
                           <!-- changes made M-->                  
-                          <input  type="number" name="code" placeholder="OTP" class="form-control" id="Email" required > 
+                          <input  type="number" name="code" placeholder="OTP" class="form-control" id="otp" required > 
                           <div class="invalid-feedback">Please enter your OTP.</div>
                         </div>
                       </div>
