--- a/views/auth/confirmPassword.ejs
+++ b/views/auth/confirmPassword.ejs
@@ -377,11 +377,11 @@
                             <!-- General Form Elements -->
                             <form action="/LodgeComplaint" method="post">
                                 <div class="row mb-3">
-                                    <label for="inputText" class="col-sm-2 col-form-label">Old Password</label>
+                                    <label for="inputText" class="col-sm-2 col-form-label">Enter OTP</label>
                                     <div class="col-sm-10">
-                                        <input type="password" name="oldpassword" id="" placeholder="Old Password" class="form-control">
+                                        <input type="number" name="oldpassword" id="" placeholder="Old Password" class="form-control">
                                     </div>
-                                </div>
+                                </div><br>
 
                                 <div class="row mb-3">
                                     <label for="inputText" class="col-sm-2 col-form-label">New Password</label>
@@ -397,11 +397,14 @@
                                     </div>
                                 </div>
                                
-                            
-
                                 <div class="row mb-3">
-                                    <div class="col-sm-10">
-                                        <button type="submit" class="btn btn-primary">Submit Form</button>
+                                    <div class="col-sm-3"></div>
+                                    <div class="col-sm-4">
+                                        <button type="btn" class="btn btn-primary">Resend OTP</button>
+                                    </div>
+                                
+                                    <div class="col-sm-5">
+                                        <button type="submit" class="btn btn-primary">Submit</button>
                                     </div>
                                 </div>
 
