--- a/views/auth/confirmOTP.ejs
+++ b/views/auth/confirmOTP.ejs
@@ -65,7 +65,7 @@
                       <div class="input-group has-validation">
                         
                         <!-- changes made M-->                  
-                        <input type="text" name="email" class="form-control" id="Email" required placeholder="Email"> 
+                        <input type="text" name="email" class="form-control" value="<%=email%>" id="Email" required > 
                         <div class="invalid-feedback">Please enter your Email.</div>
                       </div>
                     </div>
