--- a/views/auth/confirmOTP.ejs
+++ b/views/auth/confirmOTP.ejs
@@ -86,7 +86,9 @@
                     <div class="col-12">
                       <button class="btn btn-primary w-100"type="submit" value="Verify">Submit</button>
                     </div>
-                   
+                    <div class="col-12">
+                        <a href="/Resendotp?email=<%=email%>">Resend OTP</a>
+                    </div>
                   </form>
 
                 </div>
