--- a/views/auth/confirmPassword.ejs
+++ b/views/auth/confirmPassword.ejs
@@ -400,7 +400,7 @@
                                 <div class="row mb-3">
                                     <div class="col-sm-3"></div>
                                     <div class="col-sm-4">
-                                        <button type="btn" class="btn btn-primary">Resend OTP</button>
+                                        <a href="/ForgotPassword" class="btn btn-primary">Resend OTP</a>
                                     </div>
                                 
                                     <div class="col-sm-5">
