dashboard data fetched

--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -650,7 +650,7 @@
                 </div>
 
               </div>
-            </div>End Reports -->
+            </div>
 
             <div class="col-12">
               <div class="card recent-sales overflow-auto">
